# claugs

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-18-group-by.md  2026-03-18-unified-filters.md
docs/superpowers/specs/: 2026-03-18-claugs-refactor-design.md
src/claude_logs/: __init__.py  __main__.py  blocks.py  cli.py  dateparse.py  formatters.py  grouping.py  models.py  stream.py  token_stats.py  watcher.py
src/claude_stream/: __init__.py  blocks.py  cli.py  dateparse.py  grouping.py  models.py
tests/: conftest.py  test_before_after.py  test_claugs_integration.py  test_cli_group_by.py  test_cli_timestamps.py  test_compact_bug.py  test_dateparse.py  test_grouping_bucket.py  test_grouping_parse.py  test_grouping_render.py  test_grouping_scout.py  test_header_suffix.py  test_new_message_types.py  test_search.py  test_timestamp_display.py  test_timestamp_filter.py  test_token_stats.py  test_token_usage_filter.py  test_unified_filters.py
