[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-stream"
version = "0.2.3"
description = "Parse and prettify Claude Code JSONL stream output"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.10"
authors = [
    { name = "Shaun Mitchell" }
]
keywords = ["claude", "anthropic", "jsonl", "cli", "stream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
watch = [
    "watchdog>=3.0",
]

[project.scripts]
claude-stream = "claude_stream.cli:main"

[project.urls]
Homepage = "https://github.com/shitchell/claude-stream"
Repository = "https://github.com/shitchell/claude-stream"
Issues = "https://github.com/shitchell/claude-stream/issues"
