[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claugs"
version = "0.6.7"
description = "Parse and prettify Claude Code JSONL session logs"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.10"
authors = [
    { name = "Shaun Mitchell" }
]
keywords = ["claude", "anthropic", "jsonl", "cli", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0",
    "typing_extensions>=4.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
watch = [
    "watchdog>=3.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
claugs = "claude_logs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_logs"]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[project.urls]
Homepage = "https://github.com/shitchell/claugs"
Repository = "https://github.com/shitchell/claugs"
Issues = "https://github.com/shitchell/claugs/issues"
